Added whitespace lexing, reworking alpha and digit lexing.